Spacing ofter title description fix

--- a/src/styles/components/markdown.scss
+++ b/src/styles/components/markdown.scss
@@ -40,6 +40,10 @@
     }
   }
 
+  > h6 + p {
+    margin-bottom: 20px;
+  }
+
 
 
   > blockquote {
